--- a/kadai_005/index_for_student.html
+++ b/kadai_005/index_for_student.html
@@ -43,7 +43,7 @@
 
      <div class="container">
       <div class="row">
-        <div class="col-xs-6 text-center"> 
+        <div class="col-6 col-md-2 text-center"> 
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
           <p>
@@ -56,7 +56,7 @@
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
           </p>
         </div>
-        <div class="col-xs-6 text-center"> 
+        <div class="col-6 col-md-2 text-center"> 
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
           <p>
@@ -69,7 +69,7 @@
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
           </p>
         </div>
-        <div class="col-xs-6 text-center"> 
+        <div class="col-6 col-md-2 text-center"> 
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
           <p>
@@ -82,7 +82,7 @@
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
           </p>
         </div>
-        <div class="col-xs-6 text-center"> 
+        <div class="col-6 col-md-2 text-center"> 
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
           <p>
@@ -95,7 +95,7 @@
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
           </p>
         </div>
-        <div class="col-xs-6 text-center"> 
+        <div class="col-6 col-md-2 text-center"> 
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
           <p>
@@ -108,7 +108,7 @@
             <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
           </p>
         </div>
-        <div class="col-xs-6 text-center"> 
+        <div class="col-6 col-md-2 text-center"> 
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
           <p>
